--- a/css/responsive.css
+++ b/css/responsive.css
@@ -23,6 +23,10 @@ Responsive
         float: none;
     }
 
+    .navbar-language{
+        font-size:13px;
+    }
+
     .navbar-left,.navbar-right {
         float: none !important;
     }
