--- a/css/styles.css
+++ b/css/styles.css
@@ -2250,3 +2250,8 @@ a.hire-btn:hover{
     top: 50%;
     width: 40px;
 }
+
+.msft{
+    font-family: 'Segoe UI,"Raleway",Helvetica,Arial,sans-serif';
+    font-weight: normal;
+}
