--- a/css/styles.css
+++ b/css/styles.css
@@ -1105,7 +1105,7 @@ a.hire-btn:hover {
 .home-parallax {}
 
 .home-parallax .container {
-    padding: 145px 20px;
+    padding: 75px 20px;
 }
 
 .home-overlay {
@@ -2852,6 +2852,11 @@ a.hire-btn:hover {
 
 .certification {
     text-align: center;
+}
+
+.certification > span{
+    display: inline-block;
+    margin-bottom: 20px;
 }
 
 .badge-cert-shield {
